# causal-tracer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
causal_tracer/: __init__.py
causal_tracer/causal_tracing/: AsyncTracePatchProcessor.py  CausalTracer.py  HiddenFlow.py  LayerConfig.py  guess_subject.py  pick_noise_level.py  plot_hidden_flow_heatmap.py
causal_tracer/lib/: PseudoFuture.py  TraceLayer.py  TraceLayerDict.py  constants.py  layer_matching.py  logger.py  token_utils.py  torch_utils.py  util.py
tests/: conftest.py
tests/causal_tracing/: test_CausalTracer.py  test_guess_subject.py  test_pick_noise_level.py  test_plot_hidden_flow_heatmap.py
tests/lib/: test_TraceLayer.py  test_TraceLayerDict.py  test_layer_matching.py  test_token_utils.py  test_torch_utils.py  test_util.py
