[tool.poetry]
name = "causal-tracer"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"
packages = [{include = "causal_tracer"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.28.1"
matplotlib = "^3.7.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.2.0"
torch = "2.0.0"
flake8 = "^6.0.0"
syrupy = "^4.0.8"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
